# jdx-tar

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: read_unpack.rs
src/: builder.rs  format.rs  lib.rs  unpack.rs
tests/: archive.rs  builder.rs  create_fixture_tree.sh  fixtures.rs  gen_fixtures.sh  real_world.rs
